--- a/less/uw/uw.quicklinks.less
+++ b/less/uw/uw.quicklinks.less
@@ -7,7 +7,7 @@
   height: 100%;
   margin-left: 0;
   background-color: #fff;
-  overflow-x: clip;
+  overflow: clip;
 
   #quicklinks {
     position: absolute;
