--- a/less/uw/uw.search.less
+++ b/less/uw/uw.search.less
@@ -230,6 +230,9 @@ body {
       -ms-transform: matrix(1, 0, 0, 1, 0, 192);
       -o-transform: matrix(1, 0, 0, 1, 0, 192);
       transform: matrix(1, 0, 0, 1, 0, 192);
+      table.sticky-header thead {
+        top: -192px;
+      }
     }
   }
 }
